# Fake-News-Detection

./: README.md  main.py  pyproject.toml
demo/: streamlit_app.py
results/: bert_model.joblib  lstm_model.joblib  metrics_comparison.csv  tfidf_model.joblib  tfidf_vectorizer.joblib
src/: __init__.py  dataset.py  evaluate.py  features.py  preprocess.py  train.py  utils.py
src/models/: __init__.py  bert_model.py  lstm_model.py  tfidf_model.py
